# CartApp

./: ReadMe.md  docker-compose.yml
CartApi/: .gitignore  manage.py  pyproject.toml
CartApi/Api/: settings.py  urls.py
CartApi/api/: asgi.py  settings.py  urls.py  wsgi.py
CartApi/resources/: apps.py  urls.py
CartApi/utils/: constants.py
cart-api/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
cart-api/api/: settings.py  urls.py
cart-api/resources/: apps.py  urls.py
cart-api/resources/managers/: __init__.py
cart-api/resources/models/: base_model.py  cart.py  cart_grocery.py
cart-api/resources/serializers/: __init__.py  cart.py  cart_grocery.py  grocery.py
cart-api/resources/views/: __init__.py  cart.py  cart_groceries.py  cart_grocery.py  carts.py  grocery.py
cart-api/utils/: constants.py
cart-ui/: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  cypress.config.ts  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json
cart-ui/__component__/: example.cy.tsx
cart-ui/__e2e__/: example.cy.ts
cart-ui/__test__/: example.test.ts
cart-ui/app/: layout.tsx  page.tsx
cart-ui/components/: button.tsx  cardContainer.tsx  cartCard.tsx  cartForm.tsx  cartGroceriesForm.tsx  errorAlert.tsx  groceryCard.tsx  groceryForm.tsx  grocerySearchField.tsx  header.tsx  index.ts  linkButton.tsx  loading.tsx  main.tsx  navbar.tsx  textFormField.tsx
cart-ui/hooks/: grocery.ts  index.ts
cart-ui/interfaces/: apiPaginationResponse.ts  bulkUpsertRequest.ts  buttonProps.ts  (+27 more)
(+43 files in other folders)
